[tool.poetry]
name = "python3-asgi-quick-start"
version = "0.0.1"
description = ""
authors = ["Maintainer <maintainer@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
httptools = "^0.5.0"
fastapi = "^0.88.0"
pydantic = "^1.10.4"
numpy = "^1.24.1"
pandas = "^1.5.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"

[tool.poetry.dev-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "natebwangsut", email = "nate.bwangsut@gmail.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}