[tool.poetry]
name = "python3-asgi-quick-start"
version = "0.0.1"
description = ""
authors = ["Maintainer <maintainer@email.com>"]

[tool.poetry.dependencies]
python = "^3.12.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
uvloop = "^0.19.0"
httptools = "^0.6.1"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
numpy = "^2.0.0"

[tool.pdm.build]
includes = []

[project]
name = "python3-asgi-quick-start"
version = "0.0.1"
description = ""
authors = [
    {name = "natebwangsut", email = "nate.bwangsut@gmail.com"},
]
dependencies = [
    "gunicorn>=22.0.0",
    "uvicorn>=0.30.0",
    "uvloop>=0.17.0",
    "httptools>=0.6.1",
    "fastapi>=0.111.0",
    "pydantic>=2.8.2",
    "numpy>=1.24.1",
    "pandas>=2.2.2",
]
license = {text = "MIT"}
requires-python = ">=3.12"
